# NSG-Patient-Anatomy-App

./: .gitignore  Links.txt  README.md
Client/: .gitignore
Client/NSG_Metal_Render3D/: main.storyboard
Client/Render3D/: AppDelegate.swift  CustomCell.swift  Info.plist  Progress.swift  Render3D-Bridging-Header.h  SceneDelegate.swift  Selection.swift  Study.swift  TableViewController.swift  VTKViewer.h  VTKViewer.mm  ViewController.swift  Viewer.h  (+2 more)
Client/Render3D.xcodeproj/: project.pbxproj
Data/: ACRIN-DSC-MR-Brain NBIA-manifest.tcia  QIN-BRAIN-DSC-MRI_2016-03-29.tcia  TCIA-CPTAC-GBM-batch9-Dec2019.tcia  TCIA_CPTAC-LSCC-v8-Dec2019.tcia
Michael/: CMakeLists.txt
NSG Patient Anatomy Application/: AppDelegate.swift  ViewController.swift
NSG Patient Anatomy Application.xcodeproj/: project.pbxproj
NiftiServer/: saveN.py
Python/: plot_dicom.py  stl_writer.py  volume_render.py
Server/: dicom2nifti.py  handleNifti.py  view_mesh.py
Server_Python/: dicom_viewer.py  dicom_visualize.py  nifti_visualize_vtkplotter.py  nrrd.py  plot_dicom.py  plot_ply.py
TK_Ubuntu/: Links.txt
TK_Ubuntu/DICOMREADER_test/: CMakeLists.txt
TK_Ubuntu/DICOMREADER_test/DICOM/: IM2265  IM2272  IM2276  IM2281  IM2288  IM2295  IM2296  IM2302  IM2312  IM2314  IM2318  IM2320  IM2321  IM2328  IM2338  IM2339  IM2348  IM2363  IM2393  IM2394  IM2403  IM2419  IM2420  IM2422  IM2425  IM2428  IM2432  IM2438  IM2444  IM2448  IM2449  IM2452  IM2455  IM2456  IM2460  IM2462  IM2466  IM2470  IM2471  IM2474  (+132 more)
VTK Windows/: ReadDICOM.cxx
Vtk_Python/: stl_viewer  test.py
Windows/: ReadDICOM.cxx
(+1522 files in other folders)
